@@ -16,8 +16,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - php: 5.6
-          - php: 8.1
+          - php: 7.0
+          - php: 8.3
     steps:
       - uses: actions/checkout@v4.1.1
 
